# dyn2b

./: CMakeLists.txt  CMakePresets.json  README.md
docs/sphinx/source/: api.rst  conf.py  conventions.rst  index.rst  installation.rst  notation.rst  references.rst
include/dyn2b/functions/: array.h  joint.h  matrix.h  mechanics.h  screw.h  vector3.h
include/dyn2b/types/: joint.h  mechanics.h  screw.h  vector3.h
src/: CMakeLists.txt  array.c  joint.c  matrix.c  mechanics.c  screw.c  vector3.c
test/: CMakeLists.txt  common.h  joint_test.c  main_test.c  matrix_test.c  mechanics_test.c  screw_test.c  vector3_test.c
